--- a/jmh-core/pom.xml
+++ b/jmh-core/pom.xml
@@ -78,13 +78,14 @@ questions.
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerVersion>1.7</compilerVersion>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <compilerVersion>17</compilerVersion>
+                    <source>17</source>
+                    <target>17</target>
                     <fork>true</fork>
                     <compilerArgs>
                         <arg>-proc:none</arg>
                         <arg>-Xlint:serial</arg>
+                        <arg>--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <showWarnings>true</showWarnings>
                 </configuration>
