--- a/jmh-samples/pom.xml
+++ b/jmh-samples/pom.xml
@@ -66,6 +66,11 @@ THE POSSIBILITY OF SUCH DAMAGE.
             <artifactId>jackson-databind</artifactId>
             <version>2.13.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.10.0</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.apache.maven.plugins</groupId>-->
 <!--            <artifactId>maven-source-plugin</artifactId>-->
